# marvin-pay-integration

./: .gitignore  CONTRACT.md  NOTICE.md  README.md
docs/: 01-getting-started.md  02-authentication.md  03-collect.md  04-payout.md  05-bulk-payout.md  05-transaction-status.md  06-idempotency.md  06-invoices.md  07-campaigns.md  07-fees-and-fee-bearer.md  08-qr-codes.md  08-webhooks.md  09-errors-and-rate-limits.md  09-transaction-status.md  10-idempotency.md  10-reference.md  11-fees-and-fee-bearer.md  11-testing-and-sandbox.md  12-webhooks.md  13-errors-and-rate-limits.md  14-reference.md  15-testing-and-sandbox.md
examples/java/: README.md  pom.xml
examples/laravel/: PaymentControllerExample.php  README.md  WebhookRoutesExample.php
examples/node/: .env.example  collect.js  package.json  pay-invoice.js  payout.js  poll-status.js  webhook-server.js
examples/php/: _bootstrap.php  collect.php  pay_invoice.php  payout.php  poll_status.php  webhook.php
examples/python/: .env.example  collect.py  pay_invoice.py  payout.py  poll_status.py  webhook_flask.py
postman/: marvin-pay.postman_collection.json  marvin-pay.postman_environment.json
sdks/java/: README.md  pom.xml
sdks/laravel/: README.md  composer.json
sdks/laravel/config/: marvinpay.php
sdks/laravel/routes/: marvinpay.php
sdks/laravel/src/: MarvinPay.php  (+1 more)
sdks/node/: README.md  index.d.ts  marvin-pay.js  package.json  webhook-verifier.js
sdks/php/: README.md  composer.json
sdks/python/: README.md  pyproject.toml
sdks/python/marvin_pay/: __init__.py  client.py  errors.py  webhook.py
(+19 files in other folders)
