[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marvinpay"
version = "0.1.0"
description = "Python SDK for the Marvin Pay mobile-money payment gateway (XAF/XOF, West & Central Africa)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Marvin Pay" }]
keywords = ["marvin-pay", "payments", "mobile-money", "xaf", "xof", "gateway"]
dependencies = ["requests>=2.28"]

[project.urls]
Contract = "https://github.com/marvin-pay/marvin-pay-integration/blob/main/CONTRACT.md"
Documentation = "https://github.com/marvin-pay/marvin-pay-integration/tree/main/docs"

[tool.setuptools.packages.find]
where = ["."]
include = ["marvin_pay*"]
